--- a/src/style.scss
+++ b/src/style.scss
@@ -37,6 +37,7 @@
             color: black;
             font-weight: bold;
             font-size: 24px;
+          
         }
         .title{
             color: #000;
@@ -102,6 +103,9 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include tablet{
+          width: 90%;
+        }
         .sidebar {
             flex: 1;
             background-color: #3e3c61;
@@ -224,8 +228,8 @@
             .messages {
               background-color: #ddddf7;
               padding: 10px;
-              height: calc(100% - 160px);
-              overflow: scroll;
+              height: calc(100% - 100px);
+              overflow: auto;
       
               .message {
                 display: flex;
